<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="no_svs">no svs</string>
    <string name="cash">Cash</string>
    <string name="paynow">Paynow</string>
    <string name="discount">Discount(%)</string>
    <string name="split">split</string>
    <string name="reset">reset</string>

    <string name="textview">TextView</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="gst">gst</string>
    <string name="svs">svs</string>

    <string name="no_gst">no gst</string>
</resources>